Readme fetch one, all and update APIs
