# packages/server/service/update_dataset_activity.go
@@ -16,11 +16,12 @@ import (
 // @Accept */*
 // @Produce json
 // @Success 200 {object} map[string]interface{}
-// @Router /org/{orgId}/dataset/{datasetName}/activity/{category}/{activityUUID} [get]
+// @Router /org/{orgId}/dataset/{datasetName}/activity/{category}/{activityUUID} [post]
 // @Param orgId path string true "Organization Id"
 // @Param datasetName path string true "Dataset Name"
 // @Param category path string true "Category"
 // @Param activityUUID path string true "Activity UUID"
+// @Param activity body string true "Activity"
 func UpdateDatasetActivity(request *models.Request) *models.Response {
 	request.ParseJsonBody()
 	activityUUID := uuid.Must(uuid.FromString(request.GetPathParam("activityUUID")))
