# packages/server/service/update_model_activity.go
@@ -16,11 +16,12 @@ import (
 // @Accept */*
 // @Produce json
 // @Success 200 {object} map[string]interface{}
-// @Router /org/{orgId}/model/{modelName}/activity/{category}/{activityUUID} [get]
+// @Router /org/{orgId}/model/{modelName}/activity/{category}/{activityUUID} [post]
 // @Param orgId path string true "Organization Id"
 // @Param modelName path string true "Model Name"
 // @Param category path string true "Category"
 // @Param activityUUID path string true "Activity UUID"
+// @Param activity body string true "Activity"
 func UpdateModelActivity(request *models.Request) *models.Response {
 	request.ParseJsonBody()
 	activityUUID := uuid.Must(uuid.FromString(request.GetPathParam("activityUUID")))
